# ID3v2.4MetaInfoParser

./: CMakeLists.txt  COMM.cpp  COMM.h  COMR.cpp  COMR.h  ENCR.cpp  ENCR.h  EQU2.cpp  EQU2.h  ETCO.cpp  ETCO.h  GRID.cpp  GRID.h  LINK.cpp  LINK.h  OWNE.cpp  OWNE.h  PCNT.cpp  PCNT.h  POPM.cpp  POPM.h  POSS.cpp  POSS.h  PRIV.cpp  PRIV.h  RBUF.cpp  RBUF.h  README.md  RVA2.cpp  RVA2.h  SEEK.cpp  SEEK.h  SYLT.cpp  SYLT.h  TXXX.cpp  TXXX.h  UFID.cpp  UFID.h  USER.cpp  USER.h  (+15 more)
